--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,12 @@ h1 {
 
 body {
     background-image:url('https://images.unsplash.com/photo-1558538337-aab544368de8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
-    background-size:cover;
+    background-size: cover;
     margin: 20px !important;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.grey.darken-4 {
+    opacity:.8;
 }
